<resources>
    <string name="app_name">Dongi</string>
    <string name="logo_description">Dongi Logo</string>
    <string name="dongi">دنگی</string>
    <string name="register">ثبت‌نام</string>
    <string name="login">ورود</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام‌خانوادگی</string>
    <string name="email_address">ایمیل</string>
    <string name="password">گذرواژه</string>
    <string name="groupslistactivity">لیست گروه‌ها</string>
    <string name="group_details">جزئیات گروه</string>
    <string name="add_expense">اضافه کردن خرج</string>
    <string name="expense_info">اطلاعات خرج</string>
    <string name="add_user">اضافه کردن کاربر</string>
    <string name="save">ذخیره</string>
    <string name="settle">تسویه</string>
    <string name="price_spent">هزینه‌ی خرج شده</string>
    <string name="expense_reason">توضیحات خرج</string>
    <string name="blank">...</string>
    <string name="group_icon">group icon</string>
    <string name="groups">گروه‌ها</string>
    <string name="add_group">افزودن گروه</string>
    <string name="enter_group_name">نام گروه را وارد کنید</string>
    <string name="profile">حساب کاربری</string>
    <string name="group">گروه</string>
    <string name="edit">تغییر</string>
    <string name="profile_image">profile image</string>
    <string name="edit_profile">ویرایش اطلاعات حساب کاربری</string>
    <string name="logout">خروج</string>
    <string name="expenses">لیست خرج‌ها</string>
    <string name="dashboard">داشبورد</string>
    <string name="enter_new_first_name">"نام جدید را وارد کنید "</string>
    <string name="enter_new_last_name">نام‌خانوادگی حدید را وارد کنید</string>
    <string name="register_changes">ثبت تغییرات</string>
    <string name="send_invitation">ارسال دعوت</string>
    <string name="enter_member_email">ایمیل دوست خود را وارد کنید</string>
    <string name="invite_friends">دعوت دوستان</string>
    <string name="invitations">لیست دعوت‌ها</string>
    <string name="decline">رد</string>
    <string name="accept">تایید</string>
    <string name="login_image_description">login_image_description</string>
    <string name="signup_image_description">signup_image_description</string>
    <string name="dashboard_image_description">dashboard_image_description</string>
    <string name="profile_image_description">profile_image_description</string>
    <string name="members">اعضای گروه</string>
    <string name="leave_group">خروج از گروه</string>
</resources>