<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/dongi_logo" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/iran_yekan_bold"
        android:text="@string/dongi"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/PrimaryButtonStyle"
        android:layout_below="@id/appNameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/loginButton"
        style="@style/SecondaryButtonStyle"
        android:layout_below="@id/signUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

</RelativeLayout>
