<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:popupTheme="@style/ToolbarPopupTheme"
        android:theme="@style/ToolbarTheme" />

    <TextView
        android:id="@+id/editProfileTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:fontFamily="@font/iran_yekan_bold"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/edit_profile"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editProfileTitleTextView"
        android:layout_margin="16dp"
        android:autofillHints="Group Name"
        android:hint="@string/enter_new_first_name"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameEditText"
        android:layout_margin="16dp"
        android:autofillHints="Group Name"
        android:hint="@string/enter_new_last_name"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/registerChangesButton"
        style="@style/PrimaryButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastNameEditText"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:text="@string/register_changes"
        android:textSize="16sp" />

</RelativeLayout>
