<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.group.GroupDetailsActivity">

    <TextView
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_expense"
            android:fontFamily="@font/iran_yekan_bold"
            android:textSize="30sp" />

    <RelativeLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:textDirection="rtl"
                android:src="@drawable/add_receipt" />
        <EditText
                android:id="@+id/expense_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/iran_yekan_regular"
                android:hint="@string/expense_reason"
                android:inputType="text"
                android:textDirection="rtl" />
    </RelativeLayout>
    <RelativeLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/add_amount" />

        <EditText
                android:id="@+id/expense_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/iran_yekan_regular"
                android:hint="@string/price_spent"
                android:inputType="number"
                android:textDirection="rtl" />
    </RelativeLayout>
    <RelativeLayout
            android:onClick="pick_date"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/add_date" />

        <TextView
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blank"
                android:fontFamily="@font/iran_yekan_bold"
                android:textSize="30sp" />
    </RelativeLayout>

    <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/save" />


</LinearLayout>