<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:popupTheme="@style/ToolbarPopupTheme"
        android:theme="@style/ToolbarTheme" />

    <!--  signup title  -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/iran_yekan_bold"
        android:text="@string/login"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="1dp"
        android:paddingHorizontal="16dp">


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/iran_yekan_regular"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textDirection="rtl" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailEditText"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:fontFamily="@font/iran_yekan_regular"
            android:gravity="right|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textDirection="rtl"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/loginButton"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_below="@id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/login" />

    </RelativeLayout>

</RelativeLayout>
