<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:paddingVertical="8dp">

        <LinearLayout
            android:id="@+id/groupNameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/group_icon"
                android:src="@drawable/group" />

            <TextView
                android:id="@+id/groupNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/iran_yekan_regular"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:gravity="end">

            <ImageView
                android:id="@+id/declineImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/cancel"
                android:contentDescription="@string/decline" />

            <ImageView
                android:id="@+id/acceptImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/check"
                android:contentDescription="@string/accept" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/secondaryButtonColor" />

</LinearLayout>
