<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:popupTheme="@style/ToolbarPopupTheme" />

    <TextView
        android:id="@+id/profileTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_below="@id/toolbar"
        android:textSize="24sp"
        android:fontFamily="@font/iran_yekan_bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingVertical="8dp" />

    <RelativeLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileTitleTextView"
        android:layout_margin="16dp"
        android:layoutDirection="rtl">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/profile"
            android:layout_marginEnd="8dp"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/profileNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profileImageView"
            android:text="محمدامین لطفی"
            android:textSize="16sp"
            android:fontFamily="@font/iran_yekan_regular"
            android:paddingTop="4dp"
            android:textColor="@android:color/black" />

        <!--    email address    -->
        <TextView
            android:id="@+id/profileEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profileImageView"
            android:layout_alignBottom="@+id/profileImageView"
            android:gravity="right"
            android:textSize="12sp"
            android:paddingBottom="4dp"
            android:text="a.lotfi1201@gmail.com"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profileItemsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileLayout"
        android:layout_margin="16dp"
        android:layoutDirection="rtl">

        <RelativeLayout
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/editProfileImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/group_icon"
                android:src="@drawable/edit"
                android:layout_marginEnd="8dp"/>

            <!--    edit profile aligned vertically to the center    -->
            <TextView
                android:id="@+id/editProfileTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/editProfileImageView"
                android:text="@string/edit_profile"
                android:textSize="16sp"
                android:fontFamily="@font/iran_yekan_regular"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryButtonColor"
            android:layout_below="@+id/editProfile"/>

        <RelativeLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editProfile"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/logoutImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/group_icon"
                android:src="@drawable/logout"
                android:layout_marginEnd="8dp"/>

            <!--    edit profile aligned vertically to the center    -->
            <TextView
                android:id="@+id/logoutTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/logoutImageView"
                android:text="@string/logout"
                android:textSize="16sp"
                android:fontFamily="@font/iran_yekan_regular"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryButtonColor"
            android:layout_below="@+id/logout"/>

    </RelativeLayout>

</RelativeLayout>